--- a/src/components/Modals/Modal.css
+++ b/src/components/Modals/Modal.css
@@ -21,10 +21,10 @@
 }
 
 .modal-body {
-    display: flex;
+    /* display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 1rem; */
 }
 
 .success-icon {
