--- a/src/index.scss
+++ b/src/index.scss
@@ -72,6 +72,11 @@
 .btn_success {
   background-color: #19856a !important;
   border-color: #19856a !important;
+  font-weight: bold;
+}
+
+.btn_danger {
+  font-weight: bold;
 }
 
 .btn_success:hover {
