--- a/src/views/invoices/Invoices.css
+++ b/src/views/invoices/Invoices.css
@@ -63,3 +63,11 @@
 .products {
   padding-bottom: 7rem !important;
 }
+
+.table-input {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid rgb(153, 153, 153);
+}
+
