--- a/src/views/invoices/Invoices.css
+++ b/src/views/invoices/Invoices.css
@@ -71,3 +71,10 @@
   border-bottom: 1px solid rgb(153, 153, 153);
 }
 
+.invoice-info {
+  padding-bottom: 7rem !important;
+}
+
+.header-products {
+  padding-top: 7rem !important;
+}
