--- a/src/views/invoices/Invoices.css
+++ b/src/views/invoices/Invoices.css
@@ -82,3 +82,10 @@
 .menu-actions:hover {
   cursor: pointer;
 }
+
+.pagination-invoices {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+}
